import React from 'react'
import { shallow } from 'enzyme'
import { ExpensesSummary } from '../../components/ExpensesSummary'

test('should correctly render ExpensesSummwary with 1 expense', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={25000}/>)
  expect(wrapper).toMatchSnapshot()
})

test('should correctly render ExpensesSummwary with multiple expenses', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={4} expensesTotal={250000}/>)
  expect(wrapper).toMatchSnapshot()
})